# TerraTest

./: CMakeLists.txt  README.md  Setup.bat  SetupDev.bat
Win32/: SimpleWindow.cpp  SimpleWindow.hpp
includes/: GenericCheckFunctions.hpp
shaders/: CMakeLists.txt
shaders/src/: ComputeShaderTest.comp  FragmentShaderTest.frag  MeshShaderTest.mesh  VertexShaderTest.vert
src/: HelperFunctionsTest.cpp  RendererVKTest.cpp  test.cpp  testMain.cpp
